<resources>
    <string name="app_name">SUBWOOFER</string>
    <string name="logotipo">Logotipo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="identificarse">Identificarse</string>
    <string name="title_activity_calculo">CalculoActivity</string>
    <string name="logo">logo</string>
    <string name="fs">fs</string>
    <string name="qes">qes</string>
    <string name="resultado">Resultado</string>
    <string name="qts">qts</string>
    <string name="vas">vas</string>
    <string name="sellado_bassreflex">sellado-bassreflex</string>
    <string name="subwoofer_sellado_o_bass_reflex">Subwoofer Sellado o Bass Reflex</string>
    <string name="volumen_f3">volumen-f3</string>
    <string name="preferencias_subwoofer">preferencias_subwoofer</string>
    <string name="preferencias_email">correoElectronico</string>
    <string name="preferencias_isLogin">isLogin</string>
</resources>
